@@ -56,6 +56,7 @@ exportMethods(show,
               showFdrStats,
               getEMRTtable,
               performance,
+              performance2,
               ## filtering prior to merging
               filterQuantPepScore,
               filterIdentPepScore,
