@@ -47,6 +47,7 @@ setGeneric("plotFeatures", function(object, ...) standardGeneric("plotFeatures")
 setGeneric("getEMRTtable", function(object, ...) standardGeneric("getEMRTtable"))
 setGeneric("plotEMRTtable", function(object, ...) standardGeneric("plotEMRTtable"))
 setGeneric("performance", function(object, ...) standardGeneric("performance"))
+setGeneric("performance2", function(object, ...) standardGeneric("performance2"))
 setGeneric("plotRtDiffs", function(object, ...) standardGeneric("plotRtDiffs"))
 setGeneric("plotGrid", function(object, ...) standardGeneric("plotGrid"))
 setGeneric("writeIdentPeptides", function(object, ...) standardGeneric("writeIdentPeptides"))
